--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "employeedirectory",
   "version": "0.1.0",
+  "homepage": "https://maninblack1974.github.io/employeedirectory",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
